--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="wrapper">
         <div class="header"></div>
         <div class="container">
+            <img src="./img/airon-alonso.png" alt="resume img" class="resume-img-left">
             <!-- Left Container -->
             <div class="container-left">
                 <h2 class="name">
@@ -35,9 +36,9 @@
                             3D Artist
                         </h4>
                         <p>
-                            Winking Studios |
+                            Winking Studios | 2020
                         </p>
-                        <ul>
+                        <ul class="ws-li">
                             <li>
                                 Designing 3D models
                             </li>
@@ -160,12 +161,27 @@
                         <br>
                         <span class="email-add">eronjoswaalonso@gmail.com</span>
                     </P>
-                    <img src="./img/airon-alonso.png" alt="resume img" class="resume-img">
+                    <img src="./img/airon-alonso.png" alt="resume img" class="resume-img-right">
                 </div>
                 <div class="educ-bg">
                     <div class="educ-bg-title">
                         <img src="./img/arrow-down-sign-to-navigate.png" alt="arrow down" class="arrow">
                         <h3>Education</h3>
+                    </div>
+                    <div class="educ-item">
+                        <h4 class="e-i-t">
+                            Front-End Developer
+                        </h4>
+                        <p>
+                            KodeGo Bootcamp | Present
+                        </p>
+                        <ul class='kodego-proj'>
+                            <li>Recreated Google home page</li>
+                            <li>Clinical care System for Dental Clinic</li>
+                            <li>Mini Project I - Tanbayan</li>
+                            <li>E-Calculator</li>
+                            <li>Coding Journal</li>
+                        </ul>
                     </div>
                     <div class="educ-item">
                         <h4 class="e-i-t">
