--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <div class="wrapper">
         <div class="header"></div>
         <div class="container">
-            <img src="./img/airon-alonso.png" alt="resume img" class="resume-img-left">
+            <div class="r-img-left-wrapper">
+                <img src="./img/airon-alonso.png" alt="resume img" class="resume-img-left">
+            </div>
+            
             <!-- Left Container -->
             <div class="container-left">
                 <h2 class="name">
