--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <br>
                         Contact: +63 926 133 5981
                         <br>
-                        <span class="email-add">eronjoswaalonso@gmail.com</span>
+                        <span class="email-add">alonsoairon@gmail.com</span>
                     </P>
                     <img src="./img/airon-alonso.png" alt="resume img" class="resume-img-right">
                 </div>
