final e-resume product

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="icon" href="./img/a.png">
+    <link rel="icon" href="./img/capital-a.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Airon Alonso</title>
 </head>
@@ -19,7 +19,7 @@
             <div class="r-img-left-wrapper">
                 <img src="./img/airon-alonso.png" alt="resume img" class="resume-img-left">
             </div>
-            
+
             <!-- Left Container -->
             <div class="container-left">
                 <h2 class="name">
@@ -63,7 +63,43 @@
                             <img src="./img/arrow-down-sign-to-navigate.png" alt="arrow down" class="arrow">
                             <h3>professional skills</h3>
                         </div>
-                        <div class="prof-skills-item">
+
+                        <div class="prof-wrapper">
+                            <div class="prof-skills-item">
+                                <img src="./img/html-5.png" alt="html5" class="prof-img">
+                                <p>HTML</p>
+                            </div>
+                            <div class="prof-skills-item">
+                                <img src="./img/css-3.png" alt="css3" class="prof-img">
+                                <p>CSS</p>
+                            </div>
+                            <div class="prof-skills-item">
+                                <img src="./img/bootstrap.png" alt="bootstrap5" class="prof-img">
+                                <p>BOOTSTRAP</p>
+                            </div>
+                            <div class="prof-skills-item">
+                                <img src="./img/sass.png" alt="sass" class="prof-img">
+                                <P>SASS</P>
+                            </div>
+                            <div class="prof-skills-item">
+                                <img src="./img/js.png" alt="javascript" class="prof-img">
+                                <p>JavaScript</p>
+                            </div>
+                            <div class="prof-skills-item">
+                                <img src="./img/reactjs.png" alt="reactjs" class="prof-img">
+                                <p>ReactJS</p>
+                            </div>
+                            <div class="prof-skills-item">
+                                <img src="./img/php.png" alt="php" class="prof-img">
+                                <p>PHP</p>
+                            </div>
+                            <div class="prof-skills-item">
+                                <img src="./img/visual-studio.png" alt="visual-studio" class="prof-img">
+                                <p>VS Code</p>
+                            </div>
+                        </div>
+
+                        <!-- <div class="prof-skills-item">
                             <p>HTML</p>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -102,7 +138,7 @@
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star"></span>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="pers-skills">
@@ -110,7 +146,31 @@
                             <img src="./img/arrow-down-sign-to-navigate.png" alt="arrow down" class="arrow">
                             <h3>personal skills</h3>
                         </div>
-                        <div class="pers-skills-item">
+
+                        <div class="pers-wrapper">
+                            <div class="pers-skills-item">
+                                <img src="./img/creativity.png" alt="creativity img" class="pers-img">
+                                <p class="pers-text">Creativity</p>
+                            </div>
+                            <div class="pers-skills-item">
+                                <img src="./img/communication.png" alt="communication img" class="pers-img">
+                                <p class="pers-text">Communication</p>
+                            </div>
+                            <div class="pers-skills-item">
+                                <img src="./img/logic.png" alt="logic img" class="pers-img">
+                                <p class="pers-text">Logical Thinking</p>
+                            </div>
+                            <div class="pers-skills-item">
+                                <img src="./img/problem-solving.png" alt="problem solving img" class="pers-img">
+                                <p class="pers-text">Problem Solving</p>
+                            </div>
+                            <div class="pers-skills-item">
+                                <img src="./img/time-management.png" alt="time management img" class="pers-img">
+                                <p class="pers-text">Time Management</p>
+                            </div>
+                        </div>
+
+                        <!-- <div class="pers-skills-item">
                             <p>Creativity</p>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
@@ -149,7 +209,7 @@
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
